# godot-mcp

./: .gitattributes  .gitignore  .mcp.json.example  IDEAS.md  NOW.md  README.md  SHIPPED.md  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  setup.ps1
.gantry/: models.json
.github/workflows/: ci.yml
addon/godot_grounding_bridge/: bridge.gd  plugin.cfg
agent/: INSTALL.md
agent/claude/agents/: godot-editor.md
agent/claude/skills/godot/: SKILL.md
agent/codex/agents/: godot-editor.toml
agent/templates/: SKILL.md.tmpl  godot-editor.md.tmpl  godot-editor.toml.tmpl
data/: validate_script.gd
docs/: CODE_AUDIT_2026-06-10.md  CURRENTNESS_AUDIT.md  RUNTIME_VERIFICATION_QUEUE.md
docs/design/: biome-world.md  biome-world.plan.md  feature-batch-fgh.md  feature-batch-fgh.plan.md  probe-leak-hardening.md  procgen-tools.md  procgen-tools.plan.md
docs/research/: godot_tilemap_procgen_research.md
scripts/: ci_smoke.py  client_check.py  dump_api.ps1  smoke.py  smoke_phase2.py  smoke_phase3.py  smoke_phase3b.py  smoke_profile.py
src/godot_mcp/: __init__.py  bridge.py  catalogs.py  config.py  docs.py  doctor.py  edit.py  engine_api.py  init.py  lint.py  procgen.py  profile.py  project_ground.py  refs.py  runner.py  scene.py  server.py
tests/: test_bridge.py  test_containment.py  test_docs.py  test_doctor_drift.py  test_edit_integrity.py  test_engine_api.py  test_init_mcp_json.py  test_phase5.py  test_procgen.py  test_procgen_atlas_grid.py  test_procgen_audit.py  test_procgen_audit_build.py  test_procgen_biome_audit.py  test_procgen_biome_build.py  test_procgen_biome_config.py  test_procgen_build.py  test_profile_robustness.py  test_runner_verdicts.py  test_server_instructions.py  test_terrain_matcher_spec.py  test_validate_harness.py
tests/fixtures/: README.md  broken_after_autoload.gd  broken_syntax.gd  extension_api_phase4.json
