[project]
name = "godot-grounding-mcp"
version = "0.1.0"
description = "Version-exact Godot API + project-convention grounding MCP server"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["mcp>=1.12", "gdtoolkit>=4.5"]

[project.urls]
Homepage = "https://github.com/kidsmeal/godot-mcp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
